# Cephable-VirtualController-Sample

./: .gitmodules  LICENSE  README.md
src/EnabledPlayVirtualControllerSample/: EnabledPlayVirtualControllerSample.csproj  EnabledPlayVirtualControllerSample.sln  Program.cs
src/android/app/: build.gradle
src/android/app/src/main/: AndroidManifest.xml
src/android/app/src/main/java/com/example/myapplication/: MainActivity.kt
src/android/app/src/main/res/layout/: activity_main.xml
src/android/app/src/main/res/values/: strings.xml
src/android/gradle/wrapper/: gradle-wrapper.properties
src/browser/: index.html  index2.html  package-lock.json  package.json  server.js
src/browser-raw/: README.md  index.html  package.json
src/c++/: CMakeLists.txt  CephableClient.cpp  README.md  vcpkg.json
src/c++/e2e/: .gitignore  CMakeLists.txt  CephableClient.cpp  README.md
src/c++/simple/: CMakeLists.txt  CephableSample.cpp  README.md  vcpkg.json
src/c++/winhttp/: README.md  WinHTTPSignalRDemo.cpp  WinHTTPSignalRDemo.sln  WinHTTPSignalRDemo.vcxproj  WinHTTPSignalRDemo.vcxproj.filters  websocket.cpp  websocket.h
src/c++/winhttp-libhttpclient/: README.md  WinHTTPSignalRDemo.cpp  WinHTTPSignalRDemo.vcxproj  WinHTTPSignalRDemo.vcxproj.filters  pch.h  websocket.cpp  websocket.h
src/c++/winhttp-libhttpclient/lib/: libHttpClient.Win32.exp  libHttpClient.Win32.lib
src/dotnet/EnabledPlayVirtualControllerSample/: Program.cs
src/iOS/VirtualControllerDemo/VirtualControllerDemo/: ContentView.swift  Info.plist  VirtualControllerDemoApp.swift
src/iOS/VirtualControllerDemo/VirtualControllerDemo.xcodeproj/: project.pbxproj
src/iOS/VirtualControllerDemo/VirtualControllerDemo.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
src/iOS/VirtualControllerDemo/VirtualControllerDemo.xcodeproj/project.xcworkspace/xcuserdata/alexdunn.xcuserdatad/: UserInterfaceState.xcuserstate
src/iOS/VirtualControllerDemo/VirtualControllerDemo.xcodeproj/xcuserdata/alexdunn.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
src/iOS/VirtualControllerDemo/VirtualControllerDemo.xcodeproj/xcuserdata/alexdunn.xcuserdatad/xcschemes/: xcschememanagement.plist
src/iOS/VirtualControllerDemo/VirtualControllerDemoTests/: VirtualControllerDemoTests.swift
src/iOS/VirtualControllerDemo/VirtualControllerDemoUITests/: VirtualControllerDemoUITests.swift  VirtualControllerDemoUITestsLaunchTests.swift
src/sample-data/: README.md  basicKeys.json  fps_controller_complex.json  fps_kbd_mouse_complex.json  game_controller_simple_movement.json  game_kbd_mouse_simple_movement.json  key_and_button_values.json
